--- a/backend/service/activities/cmd/api/etc/activity-api.yaml
+++ b/backend/service/activities/cmd/api/etc/activity-api.yaml
@@ -1,19 +1,17 @@
 Name: activity-api
 Host: 0.0.0.0
 Port: 8893
+
 Mysql:
   DataSource: root:123456@tcp(192.168.11.160:3306)/db_zeromicro?charset=utf8mb4&loc=Asia%2FShanghai&parseTime=true
-CacheRedis:
-  - Host: 127.0.0.1:6379
-    Pass: "123456"
+
 Auth:
   AccessSecret: "go-zero-90909090"
   AccessExpire: 72000
-# email config
-Email:
-  From: service@xiaopeng.info
-  Nickname: service
-  Secret: NMNAdRWPh6NJEMxs
-  Host: smtp.exmail.qq.com
-  Port: 465
-  IsSSL: true
+
+
+ActivityRpcConf:
+  Etcd:
+    Hosts:
+      - 127.0.0.1:2379
+    Key: activitie.rpc
